--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=personasvulnerables
+
+# ===============================
+# Configuración de la base de datos (MySQL)
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/reto_oficial_vacunas?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# JPA / Hibernate (cree las tablas)
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# ===============================
+# Configuración de seguridad (JWT)
+# ===============================
+api.security.token.secret=${JWT_SECRET:mi_clave_secreta_segura}
+
